--- a/src/app/upload-result/upload-result.component.html
+++ b/src/app/upload-result/upload-result.component.html
@@ -12,12 +12,12 @@
           <div class="bg-container rounded d-flex">
             <div class="bordered-box p-4 mx-4 rounded w-100 pb-0">
               <div>
-                <label class="fs-16 lh-22 fw-bold text-primary-color mb-25">Upload Results</label>
+                <label class="fs-16 lh-22 fw-bold text-primary-color mb-25">Upload Certificate</label>
                 <img src="assets/images/cross.png" alt="Close" data-bs-dismiss="modal"
                   class="close-icon tn-close float-end mr-2" (click)="onCancel()" />
 
                 <div *ngIf="!isUploading">
-                  <span class="fs-14 mb-3 lh-16 fw-400 ff-rubik labelsUploadResult">Upload Certificate</span>
+                  <span class="fs-14 mb-3 lh-16 fw-400 ff-rubik labelsUploadResult">Select Certificate Type</span>
                   <select [(ngModel)]="selectedCertificate" class="form-select mt-2">
                     <option class="fs-16" *ngFor="let certificate of certificates"
                       [value]="certificate.documentSubType">
