Task #230654  - download certificate in json format, Task #230710 - [FE] - To filter and search data using document type at inspector side,Task #230859 - [FE] - Texual and logo changes (#5)
* Task #230654  - download certificate in json format

* removed extra functions

* Task #230710 - [FE] - To filter and search data using document type at inspector side

* changed filter state in download certificate payload

* textual changes

* Update index.html

---------

Co-authored-by: Manoj L <manojLondhe@users.noreply.github.com>

--- a/src/app/subheader/subheader.component.html
+++ b/src/app/subheader/subheader.component.html
@@ -37,15 +37,13 @@
         <span *ngIf="rmenuItem?.action == 'acadmicYear' && rmenuItem?.showButton" class="text-left">
           <div class="dropdown-container">
             <select class="form-select mt-2" (change)="onDocumentChange($event)">
-              <option value="">Document Type</option>
+              <option value="">Select Document Type</option>
               <option class="fs-16" *ngFor="let certificate of certificates" [value]="certificate.documentSubType">
                 {{ certificate.name }}
               </option>
             </select>
           </div>
-
         </span>
-
         <!-- Class Type Select -->
         <!-- <span *ngIf="rmenuItem?.action == 'classType' && rmenuItem?.showButton" class="text-left mx-1">
           <div class="dropdown-container">
