Task #230864 - [FE] - Download all Issued certificates for marksheet (UI+API integration)

--- a/src/app/download-certificate/downloadcertificate.component.html
+++ b/src/app/download-certificate/downloadcertificate.component.html
@@ -1,5 +1,9 @@
 <div class="content-body">
     <app-subheader></app-subheader>
+    <button (click)="onDownloadAllIssuedCertificates()"
+        class="float-right btn btn-bg btn-style text-primary-color text-end fw-bold text-capitalize dns-btn pt-2 dsn-g-btn">
+        <i class="fa fa-download"></i> All Issued certificates
+    </button>
     <div class="table-container">
         <table class="table">
             <thead>
