Task #230981 -[FE] - Homapage UI changes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,10 +3,11 @@
     <nav class="navbar navbar-light bg-white p-48">
       <div class="navbar-brand d-contents" id="navbarExample01">
         <div class="nav-item active logo-text d-flex align-items-center gap-15 homeHeaderLogo">
-          <img src="assets/images/educert_logo.png" />
-          <div (click)="postFile()" class="fs-12 lh-12 font-weight-bold lang-btn nav-link-color">
+          <!-- <img src="assets/images/educert_logo.png" /> -->
+          Logo
+          <!-- <div (click)="postFile()" class="fs-12 lh-12 font-weight-bold lang-btn nav-link-color">
             ADMIN
-          </div>
+          </div> -->
         </div>
         <!-- <div>
           <ul class="navbar-nav ms-auto">
@@ -42,31 +43,32 @@
         <div class="row justify-content-between">
           <div class="col-md-6 left-sec">
             <div class="fs-40 lh-48 fw-400">
-              School Certificate Generation and Verification Platform
+              Certificate Generation and Verification Platform
             </div>
             <div class="number-align mt-81">
               <div class="d-flex dflex-dc-column">
-                <div class="fs-30 lh-36 fw-500">5K+</div>
-                <div class="tr-gr-clr fs-14 lh-18 fw-400">Schools Enrolled</div>
+                <!-- <div class="fs-30 lh-36 fw-500">5K+</div>
+                <div class="tr-gr-clr fs-14 lh-18 fw-400">Schools Enrolled</div> -->
               </div>
               <div class="d-flex dflex-dc-column">
-                <div class="fs-30 lh-36 fw-500">100K+</div>
+                <!-- <div class="fs-30 lh-36 fw-500">100K+</div>
                 <div class="tr-gr-clr fs-14 lh-18 fw-400">
                   Certificates Generated
-                </div>
+                </div> -->
               </div>
               <div class="d-flex dflex-dc-column">
-                <div class="fs-30 lh-36 fw-500">50K+</div>
+                <!-- <div class="fs-30 lh-36 fw-500">50K+</div>
                 <div class="tr-gr-clr fs-14 lh-18 fw-400">
                   Students Certified
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
 
           <div class="col-md-5 right-sec">
             <div class="d-flex dflex-dc-column align-center">
-              <img class="ml-2 img-fluid" src="assets/images/Mask.png" />
+              <img class="ml-2 img-fluid"
+                src="assets/images/depositphotos_565791206-stock-photo-group-of-happy-smiling-village.jpg" />
             </div>
           </div>
         </div>
@@ -82,7 +84,7 @@
             <div class="userCategoryDesc">Please find your right Category Below</div>
           </div>
           <div class="row mt-32">
-            <div class="col-md-4">
+            <div class="col-md-6">
               <div class="lp-card categoryCards">
                 <img src="assets/images/student.svg" alt="" />
                 <div class="title">Student</div>
@@ -92,7 +94,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
               <div class="lp-card categoryCards">
                 <img src="assets/images/examiner.svg" alt="" />
                 <div class="title">VC Maker </div>
@@ -102,7 +104,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
               <div class="lp-card categoryCards">
                 <img src="assets/images/verifier.svg" alt="" />
                 <div class="title">Verifier</div>
@@ -113,7 +115,7 @@
                   <a href="/form/verifier" class="clr-grn">Create Account</a>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -299,10 +301,10 @@
     </div>
   </div>
 
-  <div class="container d-flex justify-content-center align-items-center gap-27 text-center mt-50 mb-20">
+  <!-- <div class="container d-flex justify-content-center align-items-center gap-27 text-center mt-50 mb-20">
     <div><img width="160px" src="assets/images/educert_logo.png" /></div>
     <div><img width="160px" src="assets/images/bill.png" /></div>
-  </div>
+  </div> -->
 </div>
 <ng-template #defaultBlock>
   <nav class="item-menu">
