Task #231100 -  Changed the search api payload, refactored logic  for the 'All Issued Certificate' CSV, and added an image to the homepage banner

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -67,8 +67,7 @@
 
           <div class="col-md-5 right-sec">
             <div class="d-flex dflex-dc-column align-center">
-              <img class="ml-2 img-fluid"
-                src="assets/images/depositphotos_565791206-stock-photo-group-of-happy-smiling-village.jpg" />
+              <img class="ml-2 img-fluid" src="assets/images/happy-smiling-village-kids-image.jpg" />
             </div>
           </div>
         </div>
