--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -1,44 +1,35 @@
-<app-header
-  *ngIf="header != null && !isSignupForm"
-  [headerFor]="header"
-></app-header>
+<app-header *ngIf="header != null && !isSignupForm" [headerFor]="header"></app-header>
 <ng-template #noModal>
   <div class="mt-120" *ngIf="!isSignupForm"></div>
 
   <div class="container-fluid">
     <div class="row">
       <!-- Left side with green background -->
-      <div
-        *ngIf="isSignupForm"
+      <div *ngIf="isSignupForm"
         class="col-md-4 login-left text-white leftSignUP px-25 d-flex flex-column justify-content-between"
-        style="height: auto; min-height: 90vh;"
-      >
+        style="height: auto; min-height: 90vh;">
         <!-- Logo and Title on top -->
         <div class="text-left">
-          <img
+          <!-- <img
             src="assets/images/logoWhite.svg"
             alt="Logo"
             class="img-fluid mb-65"
-          />
+          /> -->
           <h3 class="side-title fw-400">{{ 'CV_PLATFORM' | translate }}</h3>
         </div>
         <!-- Image at the bottom -->
         <div class="text-center">
-          <img
-            src="assets/images/graph-img.png"
-            alt="Image"
-            class="img-fluid"
-          />
+          <img src="assets/images/graph-img.png" alt="Image" class="img-fluid" />
         </div>
       </div>
 
       <!-- Right side with form -->
       <div class="col-md-8">
-        <div *ngIf="isSignupForm" class="d-flex align-items-center mb-20 justify-content-end mt-37 fs-14 fw-400 alreadyLoginText l-end mr-lg-5Per">
+        <div *ngIf="isSignupForm"
+          class="d-flex align-items-center mb-20 justify-content-end mt-37 fs-14 fw-400 alreadyLoginText l-end mr-lg-5Per">
           <p class="mb-0">{{ 'ALREADY_REGISTERED_LOGIN' | translate }}? &nbsp;</p>
           <a href="/login" class="text-primary-color fs-14 lh-16 fw-600">
-            {{ 'SIGNIN' | translate }}</a
-          >
+            {{ 'SIGNIN' | translate }}</a>
         </div>
         <div class="card signformWrapper pb-47 mb-5 mx-lg-10Per pb-47">
           <h3 class="font-weight-bold fs-30 lh-40 title-color mb-3 manRope-Font">
@@ -51,17 +42,9 @@
           <div *ngIf="schemaloaded; else loader" class="card-body">
             <div class="signFormContainer">
               <form [formGroup]="form2" (ngSubmit)="submit()" *ngIf="fields">
-                <formly-form
-                  [model]="model"
-                  [fields]="fields"
-                  [options]="options"
-                  [form]="form2"
-                ></formly-form>
-                <button
-                  type="submit"
-                  class="btn btn-primary w-100 mt-35 manRope-Font submit-button fs-16"
-                  [disabled]="!form2.valid"
-                >
+                <formly-form [model]="model" [fields]="fields" [options]="options" [form]="form2"></formly-form>
+                <button type="submit" class="btn btn-primary w-100 mt-35 manRope-Font submit-button fs-16"
+                  [disabled]="!form2.valid">
                   {{ 'CREATE_ACCOUNT' | translate }}
                 </button>
               </form>
@@ -88,29 +71,16 @@
           {{ 'PRIVACY_ATTRIBUTE_DEFINE' | translate }}
           <span class="float-end {{ globalPrivacy }}">
             <span *ngIf="globalPrivacy == 'public-access'">
-              &nbsp; {{ 'ANYONE' | translate }}</span
-            >
+              &nbsp; {{ 'ANYONE' | translate }}</span>
             <span *ngIf="globalPrivacy == 'internal-access'">
-              &nbsp;{{ 'ONLY_BY_ME' | translate }}</span
-            >
+              &nbsp;{{ 'ONLY_BY_ME' | translate }}</span>
             <span *ngIf="globalPrivacy == 'private-access'">
-              &nbsp;{{ 'ONLY_BY_CONSENT' | translate }}</span
-            >
-          </span></span
-        >
+              &nbsp;{{ 'ONLY_BY_CONSENT' | translate }}</span>
+          </span></span>
       </div>
-      <formly-form
-        [model]="model"
-        [fields]="fields"
-        [options]="options"
-        [form]="form2"
-      ></formly-form>
-      <button
-        type="submit"
-        id="btn-one"
-        class="btn btn-primary submit-button"
-        [disabled]="!form2.valid || isSubmitForm || form2.pristine"
-      >
+      <formly-form [model]="model" [fields]="fields" [options]="options" [form]="form2"></formly-form>
+      <button type="submit" id="btn-one" class="btn btn-primary submit-button"
+        [disabled]="!form2.valid || isSubmitForm || form2.pristine">
         {{ 'SUBMIT' | translate }}
       </button>
     </form>
@@ -125,8 +95,7 @@
             <span class="fs-7 text-grey-color">
               <span *ngIf="note.addedBy"> By {{ note.addedBy }}, </span>
               <span *ngIf="note.createdAt">
-                {{ note.createdAt | date : 'd MMM y' }}</span
-              >
+                {{ note.createdAt | date : 'd MMM y' }}</span>
             </span>
           </div>
         </div>
