--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,10 +19,13 @@
         </div> -->
       </div>
       <div>
-        <ul class="navbar-nav ms-auto">
+        <ul class="navbar-nav ms-auto categoryCards">
           <li class="nav-item d-flex gap-18 align-items-center homeHeaderRightContent">
-            <a href="/login"><span class="fs-12 font-weight-bold lang-btn nav-link-color lh-12">SIGN IN</span>
-            </a>
+            <!-- <a href="/login"><span class="fs-12 font-weight-bold lang-btn nav-link-color lh-12">SIGN IN</span>
+            </a> -->
+            <div class="button">
+              <a href="/login" class="clr-grn">Sign In</a>
+            </div>
             <!-- <a href="/login"><span class="fs-12 font-weight-bold lang-btn nav-link-color">SIGN UP</span>
             </a> -->
             <!-- <a href="/" [disabled]="true"><span
