--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,8 +3,8 @@
     <nav class="navbar navbar-light bg-white p-48">
       <div class="navbar-brand d-contents" id="navbarExample01">
         <div class="nav-item active logo-text d-flex align-items-center gap-15 homeHeaderLogo">
-          <!-- <img src="assets/images/educert_logo.png" /> -->
-          Logo
+          <img src="assets/images/logo.png" />
+          Digi Vritti
           <!-- <div (click)="postFile()" class="fs-12 lh-12 font-weight-bold lang-btn nav-link-color">
             ADMIN
           </div> -->
@@ -19,16 +19,19 @@
         </div> -->
       </div>
       <div>
-        <ul class="navbar-nav ms-auto">
+        <ul class="navbar-nav ms-auto categoryCards">
           <li class="nav-item d-flex gap-18 align-items-center homeHeaderRightContent">
-            <a href="/login"><span class="fs-12 font-weight-bold lang-btn nav-link-color lh-12">SIGN IN</span>
-            </a>
+            <!-- <a href="/login"><span class="fs-12 font-weight-bold lang-btn nav-link-color lh-12">SIGN IN</span>
+            </a> -->
+            <div class="button">
+              <a href="/login" class="clr-grn">Sign In</a>
+            </div>
             <!-- <a href="/login"><span class="fs-12 font-weight-bold lang-btn nav-link-color">SIGN UP</span>
             </a> -->
-            <a href="/" [disabled]="true"><span
+            <!-- <a href="/" [disabled]="true"><span
                 class="mb-none fs-12 font-weight-bold lang-btn nav-link-color btn btn-bg btn-sec-bg py-10 px-16 lh-12">VERIFY
                 CERTIFICATE</span>
-            </a>
+            </a> -->
           </li>
         </ul>
       </div>
@@ -43,7 +46,7 @@
         <div class="row justify-content-between">
           <div class="col-md-6 left-sec">
             <div class="fs-40 lh-48 fw-400">
-              Certificate Generation and Verification Platform
+              Certificate Generation Platform
             </div>
             <div class="number-align mt-81">
               <div class="d-flex dflex-dc-column">
@@ -83,19 +86,19 @@
             <div class="userCategoryDesc">Please find your right Category Below</div>
           </div>
           <div class="row mt-32">
-            <div class="col-md-6">
-              <div class="lp-card categoryCards">
+            <div class="col-md-3">
+              <!-- <div class="lp-card categoryCards">
                 <img src="assets/images/student.svg" alt="" />
                 <div class="title">Student</div>
                 <div class="desc">View and Download your certificate</div>
                 <div class="button">
                   <a href="/form/student-signup" class="clr-grn">Create Account</a>
                 </div>
-              </div>
+              </div> -->
             </div>
             <div class="col-md-6">
               <div class="lp-card categoryCards">
-                <img src="assets/images/examiner.svg" alt="" />
+                <img src="assets/images/examiner.png" alt="" />
                 <div class="title">VC Maker </div>
                 <div class="desc">Upload result and Generate certificates for students</div>
                 <div class="button">
@@ -103,6 +106,7 @@
                 </div>
               </div>
             </div>
+            <div class="col-md-3"></div>
             <!-- <div class="col-md-4">
               <div class="lp-card categoryCards">
                 <img src="assets/images/verifier.svg" alt="" />
