added image on signup page

--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -10,16 +10,7 @@
         style="height: auto; min-height: 90vh;">
         <!-- Logo and Title on top -->
         <div class="text-left">
-          <!-- <img
-            src="assets/images/logoWhite.svg"
-            alt="Logo"
-            class="img-fluid mb-65"
-          /> -->
-          <h3 class="side-title fw-400">{{ 'CV_PLATFORM' | translate }}</h3>
-        </div>
-        <!-- Image at the bottom -->
-        <div class="text-center">
-          <img src="assets/images/graph-img.png" alt="Image" class="img-fluid" />
+          <img src="assets/images/signup-logo.png" alt="Logo" class="mb-65" />
         </div>
       </div>
 
