[FE] - Resolved approved on preview button

--- a/src/app/issure/pdf-view/pdf-view.component.html
+++ b/src/app/issure/pdf-view/pdf-view.component.html
@@ -17,12 +17,12 @@
 
                 <!-- Approve Certificate Button (Visible only for Inspector) -->
 
-                <!-- <button *ngIf="entityName === 'Inspector'"
+                <button *ngIf="entityName === 'Inspector'"
                     class="dsn-g-btn btn btn-bg btn-style text-primary-color text-end fw-bold text-capitalize mr-3 dns-btn pt-2 f1de"
                     type="button" aria-expanded="false" data-bs-dismiss="modal" aria-label="Close"
                     (click)="onApproveCertificate()">
                     Approve Certificate
-                </button> -->
+                </button>
 
 
                 <!-- Download Certificate Dropdown (Visible only for Student) -->
