--- a/src/app/upload-result/upload-result.component.html
+++ b/src/app/upload-result/upload-result.component.html
@@ -17,13 +17,14 @@
                   class="close-icon tn-close float-end mr-2" (click)="onCancel()" />
 
                 <div *ngIf="!isUploading">
-                  <span class="fs-14 mb-3 lh-16 fw-400 ff-rubik labelsUploadResult">Marksheet</span>
                   <select [(ngModel)]="selectedCertificate" class="form-select mt-2">
+                    <option [value]="null" disabled selected>Select Document Type</option>
                     <option class="fs-16" *ngFor="let certificate of certificates"
                       [value]="certificate.documentSubType">
                       {{ certificate.name }}
                     </option>
                   </select>
+
                   <div *ngIf="showCertificateError" class="text-danger fs-12">
                     Certificate is Required.
                   </div>
